[package]
name = "ncdac-opi-parser"
version = "0.1.0"
edition = "2024"
authors = ["Sascha Bratton <sascha@brattonbratton.com>"]
license = "MIT"
description = "Parse NC DAC Offender Public Information records into a SQLite database"

[lib]
name = "ncdac_opi_parser"
path = "src/lib.rs"

[[bin]]
name = "ncdac-opi-parser"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4.5", features = ["derive"] }
zip = "2.1"
anyhow = "1.0"
indicatif = "0.17"
tokio = { version = "1.42", features = ["fs", "rt-multi-thread", "macros"] }
regex = "1.10"
once_cell = "1.19"
reqwest = { version = "0.12", features = ["blocking", "stream"] }
sha2 = "0.10"
dialoguer = "0.11"

[dev-dependencies]
tempfile = "3.8"
